* 2005-04-16 Jeremy Sanders <jeremy@jeremysanders.net>
	- Get distutils working properly with standard distutils
	- Added histogram example

* 2005-04-14 Jeremy Sanders <jeremy@jeremysanders.net>
	- Introduced patch by James Graham to make the save warning dialog
	use verbs instead of yes/no
	- Imported distutils (setuputils), and added support for distutils
	- Add scripts to start veusz from bin directory
	
* 2005-04-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Imported data files may be linked to the document, which means
	their data won't be saved with the document, but reloaded each
	time it is loaded
	
* 2005-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added exception dialog to send in bug reports
	- Axis values checked for being round wrong way
	
* 2005-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
	- Different types of error bars supported (diamond, curve, box)
	- Improve function plot line clipping near edges
	- Filled regions above/below/left/right of function
	- Filled regions above/below xy points (or histogram)
	- Axis setting to match one axis to another (equal scales)
	- resolve function moved to document from commandinterface
	(helps axis matching)
	
* 2005-04-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed widget moving buttons! - correct algorithm now
	- Implemented save/restore of window and dock positions between
	sessions

* 2005-04-02 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fixed always-redrawing bug
	- Implemented widget delete button
	- Implemented widget moving buttons
	
* 2005-03-26 Jeremy Sanders <jeremy@jeremysanders.net>
	- TextLabels now support rotation

* 2005-03-25 Jeremy Sanders <jeremy@jeremysanders.net>
	- Veusz now tracks default settings in ~/.veusz.def file for each
	user
	- It is possible to copy settings from one widget to another using
	a menu
	- The bullseye symbol works correctly now
	- Reading data now gives the count of conversion errors rather
	than throwing an exception (in the import dialog)